[package]
name = "httpose"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.3"
hyper = "0.12.35"
tokio = "0.1.22"
structopt = "0.3.3"
snafu = "0.5.0"

[[bin]]
name = "httpose"
path = "src/main.rs"
