[package]
name = "httpose"
version = "0.1.1"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
edition = "2018"
description = "A quick and dirty solution to \"HTTP-expose\" secret meant for Docker build"
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.3"
hyper = "0.14.10"
tokio = "0.1.22"
structopt = "0.3.3"
snafu = "0.5.0"
futures = "0.1.29"
ctrlc = "3.1.3"

[[bin]]
name = "httpose"
path = "src/main.rs"
